--- a/styles.css
+++ b/styles.css
@@ -32,12 +32,13 @@ body, html {
     font-weight: normal;
 }
 #title h2 {
-    margin: 5px 0 0;
+    margin-top: -1px;
+    padding: 0;
     font-weight: normal; 
     font-size: 24px;
 }
 #countdowns {
-    margin-top: 0px;
+margin-top: -13px;
     font-size: 20px;
     position: relative;
     z-index: 1000;
