--- a/styles.css
+++ b/styles.css
@@ -446,11 +446,12 @@ opacity: 1;
 }
 .floating-menu {
     text-align: center; 
+    width: 550px;
     line-height: 2;
     display: none;
     position: absolute;
     background-color: white;
-    padding: 10px;
+    padding: 15px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     z-index: 1000;
